# python_clean_architecture

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
python_clean_architecture/: __init__.py
python_clean_architecture/domain/: __init__.py  room.py
python_clean_architecture/interfaces/: memrepo.py
python_clean_architecture/repositories/: __init__.py  memrepo.py
python_clean_architecture/serializers/: __init__.py  room.py
python_clean_architecture/usecases/: __init__.py  room_list.py
tests/: __init__.py
tests/domain/: __init__.py  test_room.py
tests/repositories/: __init__.py  test_memrepo.py
tests/serializers/: __init__.py  test_serialize_domain_room.py
tests/usecases/: __init__.py  test_room_list.py
