[tool.poetry]
name = "python-clean-architecture"
version = "0.1.0"
description = ""
authors = ["marwen kouidhi <marwen.kouidhi@nac.tn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.4.9"
pre-commit = "^3.7.1"
pytest = "^8.2.2"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




